#DEV-207 - Updated AUTHORS file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ The following authors have contributed to django-lean:
   Erik Wright <erik@erikwright.com>
   Juan Pablo Di Lelle <jdilelle@gmail.com>
   Simon Law <simon@akoha.com>
-  Benoit Domingue
+  Benoit Domingue <bedingue@gmail.com>
